--- a/Odin.UITests/packages.config
+++ b/Odin.UITests/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.31" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.18.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.5.2" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.34.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
