--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -691,7 +691,9 @@
     <Content Include="Content\Images\collapse.png" />
     <Content Include="Content\Images\Desktop_ln_image_placeholder.png" />
     <Content Include="Content\Images\dwellworks_icon.png" />
+    <Content Include="Content\Images\dw_logo_mobile.png" />
     <Content Include="Content\Images\expand.png" />
+    <Content Include="Content\Images\export_pdf_icon.png" />
     <Content Include="Content\Images\forgot_password.jpg" />
     <Content Include="Content\Images\icn_alert_B1.png" />
     <Content Include="Content\Images\icn_alert_circle.png" />
@@ -717,6 +719,7 @@
     <Content Include="Content\Images\icn_housing.png" />
     <Content Include="Content\Images\icn_up_arrow.png" />
     <Content Include="Content\Images\icn_up_sel_arrow.png" />
+    <Content Include="Content\Images\ic_open_in_new_white.svg" />
     <Content Include="Content\Images\ic_search.png" />
     <Content Include="Content\Images\image_placeholder_large.png" />
     <Content Include="Content\Images\install.jpg" />
@@ -958,7 +961,6 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\jspdf.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\moment-with-locales.js" />
     <Content Include="Scripts\moment-with-locales.min.js" />
