--- a/Odin.UITests/packages.config
+++ b/Odin.UITests/packages.config
@@ -5,8 +5,11 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="PhantomJS" version="1.9.2" targetFramework="net461" />
+  <package id="phantomjs.exe" version="1.9.2.1" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.31" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.18.0" targetFramework="net461" />
+  <package id="Selenium.PhantomJS.WebDriver" version="2.1.1" targetFramework="net461" />
   <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.34.0" targetFramework="net461" />
