Role security and refactoring.

--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -47,9 +47,9 @@
     </rewrite>
     <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
-      <error statusCode="403" subStatusCode="14" responseMode="ExecuteURL" path="/error/notfound" />
-      <error statusCode="404" path="/Errors/404.html" responseMode="ExecuteURL"/>
-      <error statusCode="500" path="/Errors/error.html" responseMode="ExecuteURL"/>
+      <error statusCode="403" subStatusCode="14" responseMode="ExecuteURL" path="/Error" />
+      <error statusCode="404" path="/Error/Error404" responseMode="ExecuteURL"/>
+      <error statusCode="500" path="/Error" responseMode="ExecuteURL"/>
     </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
