--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -313,6 +313,7 @@
     <Compile Include="Controllers\Api\MessageController.cs" />
     <Compile Include="Controllers\AppointmentController.cs" />
     <Compile Include="Controllers\EmailController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeFindingPropertiesController.cs" />
     <Compile Include="Controllers\Api\ManagersController.cs" />
@@ -334,6 +335,7 @@
     <Compile Include="Filters\AiHandleErrorAttribute.cs" />
     <Compile Include="Filters\ApiAuthorizeAttribute.cs" />
     <Compile Include="Filters\AuthorizeBookMarklet.cs" />
+    <Compile Include="Filters\RoleAuthorize.cs" />
     <Compile Include="Filters\TokenAuthorizeAttribute.cs" />
     <Compile Include="Filters\ValidationActionFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -1044,6 +1046,8 @@
     <Content Include="Views\Orders\Partials\_Dashboard.cshtml" />
     <Content Include="Views\Orders\Partials\_Help.cshtml" />
     <Content Include="Views\Orders\Partials\_Message.cshtml" />
+    <Content Include="Views\Error\Error404.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
