Added test from Housing page

--- a/Odin.UITests/App.config
+++ b/Odin.UITests/App.config
@@ -10,6 +10,7 @@
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="WindowsAzureStorageEmulatorPath" value="C:\Program Files (x86)\Microsoft SDKs\Azure\Storage Emulator\AzureStorageEmulator.exe" />
     <add key="MaxDequeueCount" value="5" />
+    <add key="xunit.methodDisplay" value="method"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Odin;Integrated Security=True" providerName="System.Data.SqlClient" />
