--- a/Odin.Data/App.config
+++ b/Odin.Data/App.config
@@ -5,10 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Odin;Integrated Security=True" providerName="System.Data.SqlClient" />
-    
-    
+    <add name="Lease" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Odin.Data.Core.Models.Lease;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
