--- a/Odin.UITests/Odin.UITests.csproj
+++ b/Odin.UITests/Odin.UITests.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="ApplicationStartPageTest.cs" />
     <Compile Include="Globals.cs" />
+    <Compile Include="Helper\HelperMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Orders\IndexView_test.cs" />
     <Compile Include="Views\Orders\TransfereeView_test.cs" />
