--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -580,6 +580,10 @@
     <Compile Include="Persistence\Migrations\201712281602426_AddInviteStatusToTransferee.Designer.cs">
       <DependentUpon>201712281602426_AddInviteStatusToTransferee.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201801151559584_leaseModel.cs" />
+    <Compile Include="Persistence\Migrations\201801151559584_leaseModel.Designer.cs">
+      <DependentUpon>201801151559584_leaseModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NotificationRepository.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
@@ -867,6 +871,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201712281602426_AddInviteStatusToTransferee.resx">
       <DependentUpon>201712281602426_AddInviteStatusToTransferee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201801151559584_leaseModel.resx">
+      <DependentUpon>201801151559584_leaseModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
