--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -592,6 +592,10 @@
     <Compile Include="Persistence\Migrations\201801121524348_leaseModel.Designer.cs">
       <DependentUpon>201801121524348_leaseModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201801161228307_leaseDev.cs" />
+    <Compile Include="Persistence\Migrations\201801161228307_leaseDev.Designer.cs">
+      <DependentUpon>201801161228307_leaseDev.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NotificationRepository.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
@@ -885,6 +889,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201801121524348_leaseModel.resx">
       <DependentUpon>201801121524348_leaseModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201801161228307_leaseDev.resx">
+      <DependentUpon>201801161228307_leaseDev.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
