--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -584,6 +584,10 @@
     <Compile Include="Persistence\Migrations\201801161919330_AddCreatedByToNotifications.Designer.cs">
       <DependentUpon>201801161919330_AddCreatedByToNotifications.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201801171734343_AddProgramNotes.cs" />
+    <Compile Include="Persistence\Migrations\201801171734343_AddProgramNotes.Designer.cs">
+      <DependentUpon>201801171734343_AddProgramNotes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NotificationRepository.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
@@ -874,6 +878,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201801161919330_AddCreatedByToNotifications.resx">
       <DependentUpon>201801161919330_AddCreatedByToNotifications.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201801171734343_AddProgramNotes.resx">
+      <DependentUpon>201801171734343_AddProgramNotes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
