separated PDF export view from the HTML view and css into its own. Also fixed the progress bar

--- a/Odin/compilerconfig.json
+++ b/Odin/compilerconfig.json
@@ -82,5 +82,9 @@
   {
     "outputFile": "Content/css/transferee/dashboard.css",
     "inputFile": "Content/css/transferee/dashboard.scss"
+  },
+  {
+    "outputFile": "Content/css/transferee/HFPropertiesPDF.css",
+    "inputFile": "Content/css/transferee/HFPropertiesPDF.scss"
   }
 ]
