--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -19,7 +19,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44394</IISExpressSSLPort>
+    <IISExpressSSLPort>44370</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -463,10 +463,16 @@
       <DependentUpon>help.css</DependentUpon>
     </Content>
     <Content Include="Content\css\transferee\HFProperties.css">
-      <DependentUpon>HFProperties.scss</DependentUpon>
+      <DependentUpon>HFPropertiesPDF.scss</DependentUpon>
     </Content>
     <Content Include="Content\css\transferee\HFProperties.min.css">
       <DependentUpon>HFProperties.css</DependentUpon>
+    </Content>
+    <Content Include="Content\css\transferee\HFPropertiesPDF.css">
+      <DependentUpon>HFPropertiesPDF.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\transferee\HFPropertiesPDF.min.css">
+      <DependentUpon>HFPropertiesPDF.css</DependentUpon>
     </Content>
     <Content Include="Content\css\transferee\history.css">
       <DependentUpon>history.scss</DependentUpon>
@@ -733,6 +739,16 @@
     <Content Include="Content\Images\marker-icon-2x.png" />
     <Content Include="Content\Images\marker-icon.png" />
     <Content Include="Content\Images\marker-shadow.png" />
+    <Content Include="Content\Images\pic1.jpg" />
+    <Content Include="Content\Images\pic10.jpg" />
+    <Content Include="Content\Images\pic2.jpg" />
+    <Content Include="Content\Images\pic3.jpg" />
+    <Content Include="Content\Images\pic4.jpg" />
+    <Content Include="Content\Images\pic5.jpg" />
+    <Content Include="Content\Images\pic6.jpg" />
+    <Content Include="Content\Images\pic7.jpg" />
+    <Content Include="Content\Images\pic8.jpg" />
+    <Content Include="Content\Images\pic9.jpg" />
     <Content Include="Content\Images\popout_sml_img.png" />
     <Content Include="Content\Images\task_done.png" />
     <Content Include="Content\Images\task_notDone.png" />
@@ -869,7 +885,7 @@
     <Content Include="Content\css\transferee\sideNav.scss" />
     <Content Include="Content\css\bookmarklet.scss" />
     <Content Include="Content\css\help.scss" />
-    <TypeScriptCompile Include="Content\css\transferee\HFProperties.scss" />
+    <TypeScriptCompile Include="Content\css\transferee\HFPropertiesPDF.scss" />
     <Content Include="Content\css\transferee\help.scss" />
     <Content Include="Content\css\transferee\propertyMessages.scss" />
     <Content Include="Content\css\transferee\itineraryPdf.scss" />
@@ -1052,6 +1068,7 @@
     <Content Include="Views\Orders\Partials\_Message.cshtml" />
     <Content Include="Views\Error\Error404.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\PDF\PDFProperties.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
