--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -1069,6 +1069,7 @@
     <Content Include="Views\Error\Error404.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\PDF\PDFProperties.cshtml" />
+    <Content Include="Views\PDF\PDFItinerary.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
