Fixed date time styles and email in config.

--- a/Odin.PropBotWebJob/App.config
+++ b/Odin.PropBotWebJob/App.config
@@ -14,8 +14,8 @@
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="SendGridAPIKey" value="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" />
-    <add key="EmailErrorTo" value="odin@dwellworks.com;shane.poloha@dwellworks.com;austin.emser@dwellworks.com" />
-    <add key="EmailErrorFrom" value="odin@dwellworks.com" />
+    <add key="EmailErrorTo" value="destination@dwellworks.com;shane.poloha@dwellworks.com;austin.emser@dwellworks.com" />
+    <add key="EmailErrorFrom" value="destination@dwellworks.com" />
     <add key="MaxDequeueCount" value="5" />
   </appSettings>
   <startup>
