--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Domain\ConsultantImporter.cs" />
     <Compile Include="Domain\ManagerImporter.cs" />
     <Compile Include="Domain\OrderImporter.cs" />
+    <Compile Include="Exceptions\ModelValidationFilterException.cs" />
     <Compile Include="Extensions\HttpResponseMessageExtensions.cs" />
     <Compile Include="Extensions\UserExtensions.cs" />
     <Compile Include="Filters\AiHandleErrorAttribute.cs" />
